bin_PROGRAMS = tcpsocks
tcpsocks_SOURCES = src/close_fd.c \
			       src/listen_socket_and_setup_epoll.c \
			       src/process_accept.c \
				   src/process_read.c \
				   src/process_stdin.c \
				   src/epoll_update.c \
				   src/main.c \
	               src/parse_argv.c \
				   src/process_debt.c \
			       src/process_socks.c

