bin_PROGRAMS = tcpsocks
tcpsocks_SOURCES = close_fd.c \
			       listen_socket_and_setup_epoll.c \
			       process_accept.c \
				   process_read.c \
				   process_stdin.c \
				   epoll_update.c \
				   main.c \
	               parse_argv.c \
				   process_debt.c \
			       process_socks.c

